--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     I'm <span>Christian<br>a </span>College Student
                 </h1>
                 <p class="description">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, similique. Corrupti ratione itaque, perferendis dolores fugit quo sequi possimus dicta eum rerum aliquid ullam dolor similique, temporibus, fugiat quis dignissimos!
+                This is a Paragraphs    
                 </p>
                 <div class="action-btn">
                     <button class="button1">Button</button>
