--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="container">
                 <p class="title">Hello</p>
                 <h1 class="subtitle">
-                    I'm <span>Christian<br>a </span>College Student
+                    I'm <span>Christian<br>a </span>BSIT College Student
                 </h1>
                 <p class="description">
                 This is a Paragraphs    
