--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     rel="stylesheet"
 />
 <link rel="stylesheet" href="style.css" />
-    <title>Web Portfolio | Responsive</title>
+    <title>My Portfolio | Responsive</title>
 </head>
 
 <body>
