--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <nav>
         <div class="nav-content">
-        <div class="logo"><a href="#">Christian</a></div>
+        <div class="logo"><a href="#">My Portfolio</a></div>
         <label for="check" class="checkbox">
             <i class="ri-menu-line"></i>
         </label>
@@ -23,7 +23,6 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Service</a></li>
             <li><a href="#">Portfolio</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
