--- a/index.html
+++ b/index.html
@@ -4,28 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
-    rel="stylesheet"
-/>
-<link rel="stylesheet" href="style.css" />
-    <title>My Portfolio | Responsive</title>
+        href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Truculenta:opsz,wght@12..72,100..900&display=swap"
+        rel="stylesheet">
+
+    <title>Web Portfolio | Responsive</title>
 </head>
+
 
 <body>
     <nav>
         <div class="nav-content">
-        <div class="logo"><a href="#">My Portfolio</a></div>
-        <label for="check" class="checkbox">
-            <i class="ri-menu-line"></i>
-        </label>
-        <input type="checkbox" name="check" id="check">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
+            <div class="logo"><a href="#">my<span>portfolio</span></a></div>
+            <label for="check" class="checkbox">
+                <i class="ri-menu-line"></i>
+            </label>
+            <input type="checkbox" name="check" id="check">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#row">About</a></li>
+                <li><a href="#">Skills</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
         </div>
     </nav>
     <section class="section">
@@ -33,14 +37,10 @@
             <div class="container">
                 <p class="title">Hello</p>
                 <h1 class="subtitle">
-                    I'm <span>Christian<br>a </span>BSIT College Student
+                    I'm <span>Christian </span> <br> a College Student
                 </h1>
-                <p class="description">
-                This is a Paragraphs    
-                </p>
                 <div class="action-btn">
-                    <button class="button1">Button</button>
-                    <button class="button2">Button</button>
+                    <button class="button1"><a href="">Skills </a></button>
                 </div>
             </div>
             <div class="image">
@@ -48,6 +48,44 @@
             </div>
         </div>
     </section>
-</body>
 
+    <!-----About----->
+
+    <section id="row" class="row">
+        <div class="left">
+            <img src="spiderman.png" alt="">
+        </div>
+        <div class="right">
+            <div class="content">
+                <p class="title2">About Me</p>
+                <p>Hello I'm Christian Renz a <span>Bachelor Science And Information Technology</span> Student</p>
+            </div>
+        </div>
+    </section>
+
+    <!----Skills---->
+
+    <sectio id="skills" class="skills">
+        <div class="skills">
+        </div>
+    </sectio>
+
+   <!----Contact---->
+
+    <footer id="contact" class="contact">
+        <div class="contact-container">
+            <p class="message">Contact Form</p>
+            <form action="https://formsubmit.co/9044277f701acb0fc92832c21d76e181" method="POST" >
+                <input type="text" name="Name" placeholder="Full Name" required>
+                <input type="email" name="Email" placeholder="Email" required>
+                <textarea name="Message" placeholder="Message" required></textarea>
+                <button id="but" type="submit">Send</button>
+                </form>
+        </div>
+        <div class="links">
+            <a href=""><i class="ri-facebook-circle-fill"></i></a>
+            <a href=""><i class="ri-instagram-line"></i></a>
+        </div>
+    </footer>
+</body>
 </html>
