--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#row">About</a></li>
-                <li><a href="#">Skills</a></li>
+                <!--<li><a href="#">Skills</a></li>-->
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -40,11 +40,11 @@
                     I'm <span>Christian </span> <br> a College Student
                 </h1>
                 <div class="action-btn">
-                    <button class="button1"><a href="">Skills </a></button>
+                    <a href="#row"><button class="button1">About</button></a>
                 </div>
             </div>
             <div class="image">
-                <img src="spiderman.png" alt="">
+                <img src="profile.png" alt="">
             </div>
         </div>
     </section>
@@ -53,22 +53,22 @@
 
     <section id="row" class="row">
         <div class="left">
-            <img src="spiderman.png" alt="">
+            <img src="profile.jpg" alt="">
         </div>
         <div class="right">
             <div class="content">
-                <p class="title2">About Me</p>
-                <p>Hello I'm Christian Renz a <span>Bachelor Science And Information Technology</span> Student</p>
+                <h1 class="title2">About Me</h1>
+                <p>Welcome to my digital playground! I'm Christian Renz Ledesma, a <span>Bachelor of Sceince Information and Technology</span> enthusiast with a passion for problem-solving and a love for all things code. From debugging to designing, I thrive on turning complex concepts into streamlined solutions. Join me as I navigate the ever-changing landscape of IT, pushing boundaries and crafting innovative solutions one line of code at a time. Let's code our way to a brighter digital future together!</p>
             </div>
         </div>
     </section>
 
     <!----Skills---->
 
-    <sectio id="skills" class="skills">
+    <!--<sectio id="skills" class="skills">
         <div class="skills">
         </div>
-    </sectio>
+    </sectio>-->
 
    <!----Contact---->
 
@@ -83,8 +83,9 @@
                 </form>
         </div>
         <div class="links">
-            <a href=""><i class="ri-facebook-circle-fill"></i></a>
-            <a href=""><i class="ri-instagram-line"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=61551727907743"><i class="ri-facebook-circle-fill"><p class="fb">Facebook</p></i></a>
+            <a href="https://github.com/ChristianRenzLedesma"><i class="ri-github-fill"><p class="git">Github</p></i></a>
+            <a href="https://www.tiktok.com/@christianrenzledesma?is_from_webapp=1&sender_device=pc"><i class="ri-tiktok-fill"><p class="tik">Tiktok</p></i></a>
         </div>
     </footer>
 </body>
