--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#row">About</a></li>
-                <!--<li><a href="#">Skills</a></li>-->
+                <li><a href="#skills">Skills</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -58,35 +58,64 @@
         <div class="right">
             <div class="content">
                 <h1 class="title2">About Me</h1>
-                <p>Welcome to my digital playground! I'm Christian Renz Ledesma, a <span>Bachelor of Sceince Information and Technology</span> enthusiast with a passion for problem-solving and a love for all things code. From debugging to designing, I thrive on turning complex concepts into streamlined solutions. Join me as I navigate the ever-changing landscape of IT, pushing boundaries and crafting innovative solutions one line of code at a time. Let's code our way to a brighter digital future together!</p>
+                <p>Welcome to my digital portfolio! I'm Christian Renz Ledesma, a <span>Bachelor of Sceince Information
+                        and Technology</span> Looking ahead, I'm excited to further my career in Information Technology,
+                    exploring opportunities to tackle new challenges and continue growing as a professional. Whether
+                    it's advancing into leadership roles, specializing in a niche area of IT, or pursuing further
+                    education, I'm committed to lifelong learning and pushing the boundaries of what's possible in the
+                    world of technology.</p>
             </div>
         </div>
     </section>
 
     <!----Skills---->
 
-    <!--<sectio id="skills" class="skills">
-        <div class="skills">
+    <sectio id="skills" class="skills">
+        <div class="text">
+            <h1 style="font-size: 100px;">Skills</h1>
         </div>
-    </sectio>-->
+        <div class="skills1">
+            <p>Coding</p>
+            <a href="https://github.com/ChristianRenzLedesma"><img src="html.png"
+                    style="cursor: pointer; width: 150px;"></a>
+            <img src="css.png" style="cursor: pointer; width: 150px;">
+            <img src="cpp.png" style="cursor: pointer; width: 300px; margin-top: -20px; top: 30px; position: relative; left: -60px;">
+            <p>Gaming </p>
+            <p>Editing
+                <img src="ml.jpg" style="cursor: pointer; width: 300px; margin-left: -240px; top: 10px; margin-bottom: 2rem; margin-top: -20px;">
+            </p>
+            <img src="am.jpg" style="cursor: pointer; width: 150px;">
+            </p>
+        </div>
+    </sectio>
 
-   <!----Contact---->
+    <!----Contact---->
 
     <footer id="contact" class="contact">
         <div class="contact-container">
             <p class="message">Contact Form</p>
-            <form action="https://formsubmit.co/9044277f701acb0fc92832c21d76e181" method="POST" >
+            <form action="https://formsubmit.co/9044277f701acb0fc92832c21d76e181" method="POST">
                 <input type="text" name="Name" placeholder="Full Name" required>
                 <input type="email" name="Email" placeholder="Email" required>
                 <textarea name="Message" placeholder="Message" required></textarea>
                 <button id="but" type="submit">Send</button>
-                </form>
+            </form>
         </div>
         <div class="links">
-            <a href="https://www.facebook.com/profile.php?id=61551727907743"><i class="ri-facebook-circle-fill"><p class="fb">Facebook</p></i></a>
-            <a href="https://github.com/ChristianRenzLedesma"><i class="ri-github-fill"><p class="git">Github</p></i></a>
-            <a href="https://www.tiktok.com/@christianrenzledesma?is_from_webapp=1&sender_device=pc"><i class="ri-tiktok-fill"><p class="tik">Tiktok</p></i></a>
+            <a href="https://www.facebook.com/profile.php?id=61551727907743"><i class="ri-facebook-circle-fill">
+                    <p class="fb">Facebook</p>
+                </i></a>
+            <a href="https://github.com/ChristianRenzLedesma"><i class="ri-github-fill">
+                    <p class="git">Github</p>
+                </i></a>
+            <a href="https://www.tiktok.com/@christianrenzledesma?is_from_webapp=1&sender_device=pc"><i
+                    class="ri-tiktok-fill">
+                    <p class="tik">Tiktok</p>
+                </i></a>
         </div>
     </footer>
+
+
 </body>
+
 </html>
