--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="container">
                 <p class="title">Hello</p>
                 <h1 class="subtitle">
-                    I'm <span>Christian </span> <br> a College Student
+                    I'm <span>Christian Renz Ledesma</span> a College Student at NEUST PAPAYA OFF-CAMPUS. My age is 19 years old, my birthday is April 2, 2004, and I live in General Tinio, Nueva Ecija.                
                 </h1>
                 <div class="action-btn">
                     <a href="#row"><button class="button1">About</button></a>
